--- a/MSAToolBox/MainWindow.xaml
+++ b/MSAToolBox/MainWindow.xaml
@@ -1,9 +1,15 @@
-﻿<Controls:MetroWindow x:Class="MSAToolBox.MainWindow"
+﻿<Controls:MetroWindow
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:Legacy="clr-namespace:MSAToolBox.Controls.Legacy" xmlns:Controls1="clr-namespace:MSAToolBox.Controls" x:Class="MSAToolBox.MainWindow"
+        Title="MSAToolBox" Height="600" Width="1200" FontFamily="Microsoft YaHei UI Light" GlowBrush="{StaticResource AccentColorBrush}">
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Name="restartGame" Content="RESTART" Click="restartGame_Click"/>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
     <Grid>
-        
+        <Controls1:LegacyMorpher Margin="0"/>
     </Grid>
 </Controls:MetroWindow>
